# multi-chunking-rag

./: .env.example  .gitignore  CLAUDE.md  MASTER_PROMPT.md  README.md  SPEC.md  SPEC_ADDENDUM.md  docker-compose.yml  hardening.md  pyproject.toml  requirements-optional.txt  requirements.txt
.streamlit/: config.toml
agents/: __init__.py  agent_eval.py  agent_runner.py  audit.py  base.py  bus_factory.py  classifier_agent.py  contracts.py  extractor_agent.py  feedback_agent.py  kafka_bus.py  kafka_metrics.py  kafka_resilience.py  mcp_reference_server.py  message_bus.py  model_gateway.py  orchestrator_agent.py  otel_instrumentation.py  otel_provider.py  preprocessor_agent.py  prompt_registry.py  retraining_agent.py  retriever_agent.py  router_agent.py  serde.py  synthesiser_agent.py  transformer_agent.py  verifier_agent.py  working_memory.py
app/: app.py  poc_app.py
core/: chunk_utils.py  config.py  contracts.py  enums.py  logging.py
docs/: ENGINEERING_REVIEW.md  GAP_ANALYSIS.md  agent-pipeline-diagram.html  architecture-diagram.html  azure-architecture-diagram.html  decisions.md  demo_evidence.md  demo_evidence_di.md  implementation_status.md  render_diagram.py  traceability.md
embedding/: chunking_strategies.py  late_chunking.py  model_registry.py  modernbert.py
feedback_loop/: __init__.py  api.py  attribution.py  boundary.py  interfaces.py  models.py  normalizer.py  pipeline.py  services.py  training_rows.py
grounding/: highlight.py
ingestion/: canonicalize.py  di_client.py  docling_parser.py  document_facts.py  ingest_pipeline.py  multi_format_parser.py  parser_base.py  pdf_analysis.py  pymupdf_parser.py  worker.py
retrieval/: bm25_index.py  hybrid.py  metadata.py  rerank.py  router.py  vector_search.py
scripts/: capture_screenshots.py  demo_integration.py
storage/: db.py  db_pool.py  knowledge_graph.py  repo.py  schema.sql  schema_contract.py  setup_db.py
synthesis/: coverage.py  openai_client.py  prompts.py  verifier.py
tests/: conftest.py  test_agent_contracts.py  test_azure_openai.py  test_bm25_index_manager.py  test_chunking_strategies.py  test_cibc_headings.py  test_classifier_agent.py  test_closed_matters_plan.py  test_closed_matters_regression.py  test_coverage_attribute_query.py  test_coverage_attribute_range_losses.py  test_coverage_modes.py  test_coverage_query.py  test_coverage_query_integration.py  test_document_facts.py  (+35 more)
(+78 files in other folders)
