[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "multi-chunking-rag"
version = "0.1.0"
description = "Enterprise Agentic Intelligent Document Processing (IDP) RAG platform"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "streamlit",
    "psycopg2-binary",
    "pgvector",
    "transformers>=4.40",
    "torch>=2.1.0",
    "numpy<2",
    "pymupdf",
    "openai",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tenacity>=8.2.0",
    "cachetools>=5.3.0",
    "rank-bm25",
    "sentence-transformers",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
azure = [
    "azure-ai-documentintelligence",
]
multi-format = [
    "python-docx",
    "openpyxl",
    "beautifulsoup4",
]
docling = [
    "docling",
]
feedback-api = [
    "fastapi",
    "uvicorn",
]
kafka = [
    "kafka-python",
    "redis",
]
observability = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
]
graph = [
    "neo4j>=5.0.0",
]
dev = [
    "pytest",
    "pytest-cov",
]
all = [
    "multi-chunking-rag[azure,multi-format,docling,feedback-api,kafka,observability,graph,dev]",
]

[tool.setuptools.packages.find]
include = [
    "agents*",
    "app*",
    "core*",
    "embedding*",
    "feedback_loop*",
    "grounding*",
    "ingestion*",
    "retrieval*",
    "storage*",
    "synthesis*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests with no external dependencies (DB, LLM, network)",
    "integration: Integration tests requiring PostgreSQL (TEST_DATABASE_URL)",
    "external: Tests requiring external services (Azure DI, OpenAI API, Kafka)",
    "slow: Tests that take >5 seconds to run",
]
# Default: run only unit tests unless explicitly requested
# Usage:
#   pytest tests/ -v                       # all tests
#   pytest tests/ -v -m unit               # unit tests only
#   pytest tests/ -v -m integration        # integration tests only
#   pytest tests/ -v -m "not external"     # skip external-dependency tests
filterwarnings = [
    "ignore::DeprecationWarning:agents.feedback_agent",
    "ignore::DeprecationWarning:agents.retraining_agent",
]
